@@ -42,6 +42,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import org.apache.bookkeeper.meta.LedgerManager;
 import org.apache.bookkeeper.meta.LedgerManagerFactory;
 import org.apache.bookkeeper.bookie.BookieException;
+import org.apache.bookkeeper.bookie.GarbageCollectorThread.SafeEntryAdder;
 import org.apache.bookkeeper.bookie.Journal.JournalScanner;
 import org.apache.bookkeeper.bookie.LedgerDirsManager.LedgerDirsListener;
 import org.apache.bookkeeper.bookie.LedgerDirsManager.NoWritableLedgerDirException;
@@ -49,6 +50,7 @@ import org.apache.bookkeeper.conf.ServerConfiguration;
 import org.apache.bookkeeper.jmx.BKMBeanInfo;
 import org.apache.bookkeeper.jmx.BKMBeanRegistry;
 import org.apache.bookkeeper.proto.BookkeeperInternalCallbacks.WriteCallback;
+import org.apache.bookkeeper.proto.BookkeeperInternalCallbacks.GenericCallback;
 import org.apache.bookkeeper.util.BookKeeperConstants;
 import org.apache.bookkeeper.util.IOUtils;
 import org.apache.bookkeeper.util.MathUtils;
@@ -524,7 +526,9 @@ public class Bookie extends Thread {
         LOG.info("instantiate ledger manager {}", ledgerManagerFactory.getClass().getName());
         ledgerManager = ledgerManagerFactory.newLedgerManager();
         syncThread = new SyncThread(conf);
-        ledgerStorage = new InterleavedLedgerStorage(conf, ledgerManager, ledgerDirsManager);
+        ledgerStorage = new InterleavedLedgerStorage(conf, ledgerManager,
+                                                     ledgerDirsManager,
+                                                     new BookieSafeEntryAdder());
         handles = new HandleFactoryImpl(ledgerStorage);
         // instantiate the journal
         journal = new Journal(conf, ledgerDirsManager);
@@ -1180,6 +1184,37 @@ public class Bookie extends Thread {
         return true;
     }
 
+    private class BookieSafeEntryAdder implements SafeEntryAdder {
+        @Override
+        public void safeAddEntry(final long ledgerId, final ByteBuffer buffer,
+                                 final GenericCallback<Void> cb) {
+            journal.logAddEntry(buffer, new WriteCallback() {
+                    @Override
+                    public void writeComplete(int rc, long ledgerId2, long entryId,
+                                              InetSocketAddress addr, Object ctx) {
+                        if (rc != BookieException.Code.OK) {
+                            LOG.error("Error rewriting to journal (ledger {}, entry {})", ledgerId2, entryId);
+                            cb.operationComplete(rc, null);
+                            return;
+                        }
+                        try {
+                            addEntryByLedgerId(ledgerId, buffer);
+                            cb.operationComplete(rc, null);
+                        } catch (IOException ioe) {
+                            LOG.error("Error adding to ledger storage (ledger " + ledgerId2
+                                      + ", entry " + entryId + ")", ioe);
+                            // couldn't add to ledger storage
+                            cb.operationComplete(BookieException.Code.IllegalOpException, null);
+                        } catch (BookieException bke) {
+                            LOG.error("Bookie error adding to ledger storage (ledger " + ledgerId2
+                                      + ", entry " + entryId + ")", bke);
+                            // couldn't add to ledger storage
+                            cb.operationComplete(bke.getCode(), null);
+                        }
+                    }
+                }, null);
+        }
+    }
     /**
      * @param args
      * @throws IOException
