@@ -168,6 +168,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-542: Remove trailing spaces in IndexCorruptionTest (fpj via ivank)
 
+        BOOKKEEPER-530: data might be lost during compaction. (ivank)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
